# Vitriol

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SECURITY.md  STABILITY.md  TECHNICAL_AUDIT_REPORT.md  VITRIOL_ARCHITECTURE_DEEP_ANALYSIS.md  VITRIOL_ARTIFACT_QUALITY_REPORT.md  VITRIOL_COMMENTS_README_PAGES_ANALYSIS.md  VITRIOL_DEEP_ANALYSIS_REPORT.md  VITRIOL_DEEP_ANALYSIS_REPORT_20260422.md  VITRIOL_DEEP_ANALYSIS_v0.3.1.md  VITRIOL_DEEP_CHECK_20260504.md  VITRIOL_DEEP_VIZ_ACCURACY_QUANT_REPORT.md  VITRIOL_GIT_RELEASE_AUDIT_REPORT.md  VITRIOL_OPENSOURCE_RELEASE_AUDIT.md  VITRIOL_PRE_COMMIT_FINAL_VALIDATION_REPORT.md  VITRIOL_PRE_COMMIT_VALIDATION_REPORT.md  VITRIOL_PROJECT_ANALYSIS_CN_DETAILED.md  VITRIOL_PROJECT_COMPLETENESS_ANALYSIS.md  VITRIOL_PROMO_COPY.md  VITRIOL_RELEASE_READINESS_REPORT_20260502.md  VITRIOL_SYSTEMATIC_VALIDATION_REPORT.md  VITRIOL_TEST_IMPROVEMENT_REPORT.md  VITRIOL_VIZ_QUANT_NAS_VALIDATION_REPORT.md  Vitriol框架深度分析与价值评估（研究级）.md  pyproject.toml  requirements.txt  test_split_imports.py
.github/actions/vitriol-check/: README.md  action.yml
.github/workflows/: integration-nightly.yml  pages.yml  pypi-publish.yml  python-ci.yml  vitriol-check-example.yml
demos/: exobrain_alignment_train.py  exobrain_comprehensive_test.py  exobrain_demo.py  exobrain_inference_demo.py  exobrain_multisource_test.py  exobrain_query_hit_demo.py  exobrain_real_model_test.py  exobrain_v05_test.py  exobrain_v06_test.py
docs/: TEST_ASSETS.md  VIEWER_GUIDE.md  VITRIOL_COMPREHENSIVE_DEEP_ANALYSIS_20260612.md  arch-compare.html  ci-integration.md  cis_framework_explained.html  compare-3d.html  evolution-tree.html  index.html  innovation-timeline.html  kv-turboquant-qwen35-0.8b-alignment.md  model-family-coverage.md  nas-ppl-compatibility.md  opensource_audit_report.md  opensource_readiness_report.md  release-checklist.md  release-validation.md  turboquant-paper-gap-report.md  turboquant_turboquantum_analysis.md  turboquantum_analysis.md  viewer.html
docs/case-studies/: 01-zero-download-architecture-compare.md  02-ci-model-config-validation.md  03-cis-strategy-ranking.md  04-multi-strategy-cis-validate-compare.md
docs/data/Qwen3.5-397B-A17B-Archon-ultra-dummy/: architecture.html
docs/data/Qwen3.5-397B-A17B-Vitriol-ultra-dummy/: config.json  meta-config.json
docs/data/deepseek-demo/: config.json
docs/data/qwen3-demo/: config.json
docs/manifests/: demo_targets.txt  viz_models.json  vocab_viz.json
docs/superpowers/plans/: 2026-04-08-model-family-coverage-implementation.md  2026-04-14-minimax-m2-7-pipeline.md  2026-04-23-deepseek-v4-flash-base.md  2026-04-23-hy3-html-visualization.md  2026-04-24-viz-p0-truthfulness-implementation.md  2026-04-28-attention-lens-ui-polish.md  2026-04-28-cross-page-bidirectional-sync.md  2026-04-28-offline-trace-replay.md  2026-04-28-structure-driven-token-playback.md  2026-05-07-kv-hook-stability-and-observability.md  2026-05-07-kv-mainline-benchmark-and-observability.md
docs/superpowers/reports/: 2026-04-25-viz-p0-pr-summary.md  2026-05-07-hermes-agentic-rl-readiness-audit.md
docs/superpowers/specs/: 2026-04-08-model-family-coverage-design.md  2026-04-15-archon-gap-closure-design.md  2026-04-15-vitriol-gap-closure-design.md  2026-04-20-exobrain-architecture-correction.md  2026-04-23-deepseek-v4-flash-base-design.md  2026-04-24-viz-p0-truthfulness-design.md  2026-04-28-cross-page-bidirectional-sync-design.md  2026-04-28-nodeid-interface-dictionary.md  2026-04-28-offline-trace-replay-design.md  2026-04-28-token-inference-visualization-design.md  2026-05-07-kv-mainline-benchmark-and-observability-design.md
docs/viz-models/: index.html
docs/viz-models/Qwen3.5-397B-A17B-Vitriol-ultra-dummy/: architecture.html
docs/vocab-viz/: index.html
output/: evolution_tree.html
output/1447c0f4-f5ad-4acd-86c6-8be89b6369ad/: VITRIOL_DEEP_ANALYSIS_20260505.md
output/9908a6cb-5175-46bc-a8bb-3a1dbb44e5b9/: AGENT_INTELLIGENCE_ENHANCEMENT.md  AGENT_INTELLIGENCE_INTEGRATION_GUIDE.md  DACHAOYI3_DEEP_REVIEW.md  DELIVERABLES.md  DELIVERY_MANIFEST.md  agent_evolution.py  agent_intelligence.py  agent_memory.py  apply_p0_fixes.sh  cleanup_and_archive.sh  frontend_ws_refactor_example.py  install_intelligent_agents.sh  main_py_refactor_example.py  smoke_test.sh
output/nas_results/: results.json
scripts/: batch_validate.py  exobrain_distill_experiment.py  exobrain_distill_hybridultra.py  install_dev_cpu.sh  prepare_test_assets.py  run_all_demos.sh  run_glm_5_1_demo.sh  run_hy3_preview_demo.sh  run_minimax_m2_7_ultra_pipeline.sh  run_model_demo.sh  sync_github_pages_assets.py  validate_one.py
src/vitriol/: __init__.py  __main__.py
src/vitriol/adapters/: __init__.py  base.py  cohere.py  deepseek.py  gemma.py  glm.py  llama.py  llama31.py  minimax.py  mistral.py  phi.py  qwen.py  registry.py  stablelm.py
src/vitriol/ai/: __init__.py  recommender.py
src/vitriol/api/: __init__.py  server.py
tests/: test_adapters_comprehensive.py  test_adapters_extended.py  test_adapters_llama31.py  test_adapters_patches.py  test_ai_recommender.py  test_api_models_dynamic.py  test_api_nas_job.py  test_api_offline_propagation.py  test_api_security_context_in_result.py  test_api_server.py  test_arch_viz_block_renderer.py  test_arch_viz_core_parser.py  test_arch_viz_truthfulness.py  test_architecture_analyzers.py  test_bench_autokv.py  test_bench_report.py  test_bench_run_summary_fields.py  test_bench_runner.py  test_boundary_conditions.py  test_cache_hooks.py  test_check_report.py  test_cli_arch_viz.py  test_cli_batch.py  test_cli_bench.py  test_cli_check.py  test_cli_cis.py  test_cli_commands_misc.py  test_cli_evolve.py  test_cli_exobrain.py  test_cli_export.py  test_cli_hash.py  test_cli_infer.py  test_cli_nas_rl.py  test_cli_offline_propagation.py  test_cli_optional_dependencies.py  test_cli_validate.py  test_cli_visualize.py  test_cli_vocab_viz.py  test_cli_webui.py  test_cli_weight_viz.py  (+115 more)
tests/integration/: conftest.py  test_generator_refactor.py  test_golden_path_check.py  test_golden_path_strategy_compare.py
(+240 files in other folders)
